--- a/E-Commerce-Front-End/E-Commerce-App/src/index.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/index.html
@@ -10,6 +10,14 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+
+  <script type="text/javascript"
+   src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js"></script>
+
+
+  
 </head>
 
 <body>
